# agent-monitor-hs

./: .gitignore  CLAUDE.md  CONVERSATION-direct.md  CONVERSATION-direct2.md  CONVERSATION.md  README.md  agent-monitor-hs.cabal  flake.nix
app/: Main.hs
artifacts/: devlog.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
docs/: demo.tape  generate-demo.sh  sample-session.jsonl
src/AgentMonitor/: Parser.hs  ProcChecker.hs  Types.hs  UI.hs  Watcher.hs
