cabal-version:      3.0
name:               agent-monitor-hs
version:            0.1.0.0
synopsis:           TUI dashboard for Claude Code subagent hierarchy
license:            MIT
build-type:         Simple

library
  exposed-modules:
      AgentMonitor.Types
    , AgentMonitor.Parser
    , AgentMonitor.Watcher
    , AgentMonitor.UI
  hs-source-dirs:   src
  build-depends:
      base >= 4.14 && < 5
    , aeson
    , brick >= 2.1
    , bytestring
    , containers
    , directory
    , filepath
    , text
    , time
    , vector
    , vty >= 6.0
    , vty-crossplatform
  default-language: GHC2021
  ghc-options:      -Wall

executable agent-monitor-hs
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base >= 4.14 && < 5
    , agent-monitor-hs
    , bytestring
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
